navmenu gap bug fix

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -94,7 +94,7 @@ a {
     }
 
     .active-backdrop {
-        top: 10vh;
+        top: 80px;
         height: 100vh;
     }
 
